k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: suvidha-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: suvidha-ip
    networking.gke.io/managed-certificates: gkep-cert2
spec:
  rules:
    - host: gkep.cabswale.in
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port: { number: 3000 }
          - path: /
            pathType: Prefix
            backend:
              service:
                name: router
                port: { number: 8080 }
